<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/fav"
            android:checkable="true"
            android:icon="@drawable/favorit_line"
            android:title="@string/app_name"
            app:showAsAction="ifRoom" />

</menu>