<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".mainMenu.match.last.FragmentLast">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp">

        <Spinner
                android:id="@+id/spinner_last"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="16dp"
                android:textAlignment="center"
        />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
            android:id="@+id/lastRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
    />


</FrameLayout>