<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".mainMenu.favorit.favMatch.matchFragment">

    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">
        <android.support.v4.view.ViewPager
                android:id="@+id/viewpager_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/navigation"
                android:layout_alignParentTop="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.design.widget.TabLayout
                    android:id="@+id/tabs_main"
                    app:tabBackground="@color/colorPrimary"
                    app:tabIndicatorColor="@android:color/white"
                    app:tabTextColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"/>

        </android.support.v4.view.ViewPager>


    </RelativeLayout>

</FrameLayout>